Fix flex container spacing

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -38,4 +38,5 @@ body {
   align-items: center;
   width: 63rem;
   margin: 0 auto;
+  text-align: center;
 }
