--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -10,4 +10,11 @@
   &:hover {
     transform: translateY(-10%);
   }
+
+  &__container {
+    margin-top: 3rem;
+    border-radius: 100px;
+    display: flex;
+    gap: 3rem;
+  }
 }
