--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,7 +1,6 @@
 .header {
   width: 100%;
   height: 50rem;
-  text-align: center;
   background-image: linear-gradient(
       to top,
       rgba(255, 255, 255, 0.584) 45%,
@@ -10,11 +9,4 @@
     url(../images/bg-header-desktop.png);
   background-size: cover;
   padding-top: 10rem;
-
-  &__btns {
-    padding-top: 3rem;
-    border-radius: 100px;
-    display: flex;
-    gap: 3rem;
-  }
 }
